change action key to ctrl x

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Change prefix from C-b to C-a
 unbind C-b
-set -g prefix C-a
+set -g prefix C-x
 
 # 256 colors for vim
 set -g default-terminal "screen-256color"
